@@ -8,6 +8,21 @@
 /* This file is generated by tools/leap_seconds_header.pl */
 #include "leap_seconds.h"
 
+/* It seems that on Windows before Perl 5.20, the Perl_isfinite macro exists,
+   but it tries to call Perl_isinf and Perl_isnan, which don't exist. */
+#if defined (Perl_isfinite) && defined (Perl_isinf) && defined (Perl_isnan)
+#  define dt_isfinite Perl_isfinite
+#else
+#  include <math.h>
+#  ifdef isfinite
+#    define dt_isfinite isfinite
+#  else
+#    ifdef finite
+#      define dt_isfinite finite
+#    endif
+#  endif
+#endif
+
 #define DAYS_PER_400_YEARS  146097
 #define DAYS_PER_4_YEARS    1461
 #define MARCH_1             306
@@ -191,13 +206,14 @@ _seconds_as_components(self, secs, utc_secs = 0, secs_modifier = 0)
         mPUSHi(m);
         mPUSHi(s);
 
+#ifdef dt_isfinite
 void
 _normalize_tai_seconds(self, days, secs)
     SV* days;
     SV* secs;
 
     PPCODE:
-        if (Perl_isfinite(SvNV(days)) && Perl_isfinite(SvNV(secs))) {
+        if (dt_isfinite(SvNV(days)) && dt_isfinite(SvNV(secs))) {
             IV d = SvIV(days);
             IV s = SvIV(secs);
             IV adj;
@@ -221,7 +237,7 @@ _normalize_leap_seconds(self, days, secs)
     SV* secs;
 
     PPCODE:
-        if (Perl_isfinite(SvNV(days)) && Perl_isfinite(SvNV(secs))) {
+        if (dt_isfinite(SvNV(days)) && dt_isfinite(SvNV(secs))) {
             IV d = SvIV(days);
             IV s = SvIV(secs);
             IV day_length;
@@ -245,6 +261,7 @@ _normalize_leap_seconds(self, days, secs)
             sv_setiv(secs, (IV) s);
         }
 
+#endif /* ifdef dt_isfinite */
 
 void
 _time_as_seconds(self, h, m, s)
